test with null object